@@ -48,3 +48,5 @@ src/tools/vfs_info
 src/unittest/cpp/benchmark/benchmark
 src/unittest/cpp/unittest
 .idea/
+src/extensions/*/build/
+src/extensions/*/*/build/
