@@ -1,7 +1,17 @@
-built_extensiondir = $(datadir)/$(PACKAGE)/extensions
-built_extension_DATA = event-viewer.mobius
-dist_noinst_DATA = *.py icon.png
+.PHONY: all cmake-clean cmake-install
 
-event-viewer.mobius: $(dist_noinst_DATA)
-	$(RM) -f $@
-	zip $@ $^
+all:
+	mkdir -p build
+	cd build && cmake .. -DCMAKE_INSTALL_PREFIX=$(prefix)
+	cd build && make
+
+cmake-clean:
+	rm -rf build
+
+cmake-install:
+	cd build && make install
+
+clean-local: cmake-clean
+install-exec-local: cmake-install
+
+EXTRA_DIST = CMakeLists.txt *.py icon.png
